# WildCat

./: .gitignore  Makefile  README.md  _CoqProject  coq-hott-wildcat.opam  dune-project
theories/: Basics.v  Cat0.v  Cat1.v  Core.v  EquivCat.v  Fibrations.v  Forall.v  Glob.v  Laxity.v  Notations.v  Paths.v  Prod.v  Sigma.v  Transformation.v  Type.v  Unit.v  dune  pType.v
